[gd_scene load_steps=19 format=3 uid="uid://ci7cukdcxsjpq"]

[ext_resource type="Theme" uid="uid://csy5xf0m78gm2" path="res://textures/theme.tres" id="1_es2p6"]
[ext_resource type="Script" uid="uid://kuowvdd77jvp" path="res://board/main.gd" id="1_tmt7i"]
[ext_resource type="Script" uid="uid://jho7c42xy578" path="res://board/ui/score.gd" id="2_d4vwg"]
[ext_resource type="Script" uid="uid://dexk1h44me5ni" path="res://board/ui/board/board.gd" id="2_jdly2"]
[ext_resource type="Script" uid="uid://kyelgpl4uka3" path="res://board/ui/menu/menu_file.gd" id="2_x7vg5"]
[ext_resource type="TileSet" uid="uid://c2fjaac6tfuak" path="res://textures/tileset.tres" id="3_jdly2"]
[ext_resource type="Script" uid="uid://da7s0t81p7udb" path="res://board/ui/board/board_background.gd" id="3_udv86"]
[ext_resource type="Script" uid="uid://cbfbrqpjlwm2u" path="res://board/ui/menu/menu_settings.gd" id="3_v6giy"]
[ext_resource type="Script" uid="uid://djbimqgro8vku" path="res://board/ui/board.gd" id="6_qb5gv"]
[ext_resource type="Script" uid="uid://mxta8bkkeq8j" path="res://board/ui/preview/preview.gd" id="7_x7vg5"]
[ext_resource type="Script" uid="uid://bp175he2qetv1" path="res://board/ui/new_game_popup.gd" id="8_ciyxn"]
[ext_resource type="Script" uid="uid://p626t6c8uiq2" path="res://board/ui/board/elements.gd" id="9_ox5xr"]
[ext_resource type="Script" uid="uid://chmms0mtqyvqu" path="res://highscore/display/high_score.gd" id="10_v6giy"]
[ext_resource type="Script" uid="uid://y87xjiajg2ic" path="res://board/ui/preview/preview_grid.gd" id="11_27kvy"]
[ext_resource type="Script" uid="uid://cyotmk2pfylnw" path="res://board/ui/board/background.gd" id="11_pcm8c"]
[ext_resource type="PackedScene" uid="uid://caxlykavcnmo0" path="res://highscore/display/sceen.tscn" id="12_ff57k"]

[sub_resource type="ViewportTexture" id="ViewportTexture_x7vg5"]
viewport_path = NodePath("Preview")

[sub_resource type="ViewportTexture" id="ViewportTexture_27kvy"]
viewport_path = NodePath("Board")

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_es2p6")
script = ExtResource("1_tmt7i")

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="HBoxContainer" parent="UI"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="FileMenuButton" type="MenuButton" parent="UI/Top"]
layout_mode = 2
text = "Datoteka"
flat = false
item_count = 3
popup/item_0/text = "Nova Igra"
popup/item_0/id = 0
popup/item_1/text = "Najbolji rezultati"
popup/item_1/id = 1
popup/item_2/text = "Izađi"
popup/item_2/id = 2
script = ExtResource("2_x7vg5")

[node name="SettingsMenuButton" type="MenuButton" parent="UI/Top"]
layout_mode = 2
text = "Podešavanja"
flat = false
item_count = 3
popup/item_0/text = "Zvuk"
popup/item_0/checkable = 1
popup/item_0/id = 1
popup/item_1/text = "Muzika"
popup/item_1/checkable = 1
popup/item_1/id = 2
popup/item_2/text = "Stil"
popup/item_2/id = 0
script = ExtResource("3_v6giy")

[node name="Score" type="Label" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 4
text = "0000000"
horizontal_alignment = 1
script = ExtResource("2_d4vwg")

[node name="Preview" type="ScrollContainer" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
draw_focus_border = true
vertical_scroll_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/Top/Preview"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("ViewportTexture_x7vg5")
expand_mode = 3
stretch_mode = 4

[node name="Bottom" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Board" type="TextureRect" parent="UI/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("ViewportTexture_27kvy")
expand_mode = 1
script = ExtResource("6_qb5gv")

[node name="Chat" type="RichTextLabel" parent="UI/Bottom"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 2
text = "test
najjači
svojevoljenim
c
1
2
3"
fit_content = true
autowrap_mode = 0
selection_enabled = true

[node name="Board" type="SubViewport" parent="."]
disable_3d = true
script = ExtResource("2_jdly2")

[node name="Background" type="TileMapLayer" parent="Board"]
tile_set = ExtResource("3_jdly2")
script = ExtResource("3_udv86")

[node name="Elements" type="TileMapLayer" parent="Board"]
tile_set = ExtResource("3_jdly2")
script = ExtResource("9_ox5xr")

[node name="SelectedElementBackground" type="Sprite2D" parent="Board"]
script = ExtResource("11_pcm8c")

[node name="SelectedTargetBackground" type="Sprite2D" parent="Board"]

[node name="SelectedElement" type="Sprite2D" parent="Board"]

[node name="Preview" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
gui_disable_input = true
size = Vector2i(48, 16)
script = ExtResource("7_x7vg5")

[node name="Grid" type="TileMapLayer" parent="Preview"]
tile_set = ExtResource("3_jdly2")
script = ExtResource("11_27kvy")

[node name="NewGamePopup" type="Window" parent="."]
unique_name_in_owner = true
disable_3d = true
oversampling_override = 1.0
title = "Nova Igra"
initial_position = 1
size = Vector2i(300, 160)
visible = false
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("8_ciyxn")

[node name="MarginContainer" type="MarginContainer" parent="NewGamePopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_es2p6")

[node name="Options" type="VBoxContainer" parent="NewGamePopup/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_es2p6")

[node name="Size" type="HBoxContainer" parent="NewGamePopup/MarginContainer/Options"]
layout_mode = 2
theme = ExtResource("1_es2p6")

[node name="Label" type="Label" parent="NewGamePopup/MarginContainer/Options/Size"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_es2p6")
theme_override_font_sizes/font_size = 20
text = "Veličina Table"

[node name="Input" type="SpinBox" parent="NewGamePopup/MarginContainer/Options/Size"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_es2p6")
min_value = 3.0
max_value = 50.0
value = 9.0
rounded = true

[node name="SpawnAmount" type="HBoxContainer" parent="NewGamePopup/MarginContainer/Options"]
layout_mode = 2
theme = ExtResource("1_es2p6")

[node name="Label" type="Label" parent="NewGamePopup/MarginContainer/Options/SpawnAmount"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_es2p6")
theme_override_font_sizes/font_size = 20
text = "Dodati po potezu"

[node name="Input" type="SpinBox" parent="NewGamePopup/MarginContainer/Options/SpawnAmount"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_es2p6")
min_value = 1.0
max_value = 50.0
value = 3.0
rounded = true

[node name="WordMode" type="CheckBox" parent="NewGamePopup/MarginContainer/Options"]
layout_mode = 2
theme = ExtResource("1_es2p6")
text = "Slova"

[node name="Confirm" type="HBoxContainer" parent="NewGamePopup/MarginContainer/Options"]
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("1_es2p6")

[node name="Cancel" type="Button" parent="NewGamePopup/MarginContainer/Options/Confirm"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_es2p6")
text = "Odustani"

[node name="Start" type="Button" parent="NewGamePopup/MarginContainer/Options/Confirm"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_es2p6")
text = "Počni"

[node name="HighScore" type="Window" parent="."]
unique_name_in_owner = true
disable_3d = true
oversampling_override = 1.0
title = "Najbolji rezultati"
initial_position = 1
size = Vector2i(600, 300)
visible = false
transient = true
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("10_v6giy")

[node name="MarginContainer" type="MarginContainer" parent="HighScore"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_es2p6")

[node name="ScrollContainer" type="ScrollContainer" parent="HighScore/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_es2p6")
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="HighScore/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_es2p6")

[node name="Score1" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score2" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score3" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score4" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score5" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score6" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score7" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score8" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score9" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[node name="Score10" parent="HighScore/MarginContainer/ScrollContainer/List" instance=ExtResource("12_ff57k")]
layout_mode = 2

[connection signal="board_clicked" from="UI/Bottom/Board" to="." method="_on_board_clicked"]
[connection signal="close_requested" from="NewGamePopup" to="NewGamePopup" method="_on_close_requested"]
[connection signal="value_changed" from="NewGamePopup/MarginContainer/Options/Size/Input" to="NewGamePopup" method="_on_input_size"]
[connection signal="value_changed" from="NewGamePopup/MarginContainer/Options/SpawnAmount/Input" to="NewGamePopup" method="_on_input_amount"]
[connection signal="toggled" from="NewGamePopup/MarginContainer/Options/WordMode" to="NewGamePopup" method="_on_input_word"]
[connection signal="pressed" from="NewGamePopup/MarginContainer/Options/Confirm/Cancel" to="NewGamePopup" method="_on_cancel_pressed"]
[connection signal="pressed" from="NewGamePopup/MarginContainer/Options/Confirm/Start" to="NewGamePopup" method="_on_start_pressed"]
[connection signal="close_requested" from="HighScore" to="HighScore" method="_on_close_requested"]
[connection signal="visibility_changed" from="HighScore" to="HighScore" method="_on_visibility_changed"]
